v3.8.4 (XXXX-XX-XX)
-------------------

* Simplify the tagging of EnumerateCollectionNodes and IndexNodes with the
  "read-own-writes" flag. Previously the tagging only happened after all query
  optimizations were completed, making the tag unavailable to the optimizer.
  Now the tag is set early on, so it is accessible by the query optimizer.

* Removed an invalid assertion that could be triggered during chaos testing in
  maintainer mode.

* Improved sync protocol to commit after each chunk and get rid of
  potentially dangerous NO_INDEXING optimization.

* Do not expose "parallelism" key in responses to Pregel control job requests
  when parallelism is not set. This avoids returning a "parallelism" attribute
  in the response with a value "(non-representable type none)".


v3.8.3 (2021-11-17)
-------------------

* In the shards overview the list of servers to move the leader shard to, now
  also contains the current followers. This means that from now on also active
  follower servers can be nominated as the leading server for that specific
  shard.

* Fixed an issue in old incremental sync protocol with document keys that
  contained special characters (`%`). These keys could be send unencoded in the
  incremental sync protocol, leading to wrong key ranges being transfered
  between leader and follower, and thus causing follow-up errors and preventing
  getting in sync.

* Extend Windows minidumps with memory regions referenced from CPU registers or
  the stack to provide more contextual information in case of crashes.

* When using Indexes within traversals (e.g. [_from, date]) and filter based on
  a function (e.g. FILTER path.edges[0].date <= DATE_ADD(@now, 5, "day")) this
  function was passed through to the index. The index cannot evaluate this
  function and returned incorrect results. Now all functions are evaluted before
  looking into the index. Fixes BTS-407.

* Fixed arangodump not overwriting dump directory when flags `--all-databases`